[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/default-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://player/sprites/4.png" type="Texture" id=3]
[ext_resource path="res://player/sprites/tito-shooting-01.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[node name="menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_bottom = 40.0

[node name="title" type="Label" parent="VBoxContainer"]
margin_right = 545.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Start a new game"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 545.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 187.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Player name"

[node name="playerName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 405.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 545.0
margin_bottom = 430.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 143.0
margin_right = 221.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 4 )
text = "Create Server"

[node name="createServer" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 225.0
margin_right = 545.0
margin_bottom = 320.0
texture_normal = ExtResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 434.0
margin_right = 545.0
margin_bottom = 477.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 289.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Server IP address"

[node name="serverAddress" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
margin_left = 293.0
margin_right = 507.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 481.0
margin_right = 545.0
margin_bottom = 641.0

[node name="joinServer" type="TextureButton" parent="VBoxContainer/HBoxContainer4"]
margin_right = 160.0
margin_bottom = 160.0
texture_normal = ExtResource( 4 )
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/playerName" to="." method="_on_playerName_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/createServer" to="." method="_on_createServer_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer3/serverAddress" to="." method="_on_serverAddress_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/joinServer" to="." method="_on_joinServer_pressed"]
